--- a/src/view/user/account/register.ejs
+++ b/src/view/user/account/register.ejs
@@ -1,18 +1,29 @@
 <div class="container">
     <form action="/register" method="post">
-        <input type="text" name="username" placeholder="Username"><br>
-        <input type="email" name="email" placeholder="Email"><br>
-        <input type="text" name="phone" placeholder="Mobile number"><br>
-        <input type="password" name="password" placeholder="Password"><br>
+        <input type="email" name="email" placeholder="Email" value="<%= locals.errorObj?.email || '' %>"><br>
+        <% if(locals.errorObj && errorObj.emailError) { %>
+            <p class="text-danger"><%= errorObj.emailError %></p>
+        <% } %>
+        <input type="text" name="phone" placeholder="Mobile number" value="<%= locals.errorObj?.phone || '' %>"><br>
+        <% if(locals.errorObj && errorObj.phoneError) { %>
+            <p class="text-danger"><%= errorObj.phoneError %></p>
+        <% } %>
+        <input type="password" name="password" placeholder="Password" ><br>
+        <% if(locals.errorObj && errorObj.passwordError) { %>
+            <p class="text-danger"><%= errorObj.passwordError %></p>
+        <% } %>
         <input type="password" name="Cpassword" placeholder="Confirm Password"><br>
+        <% if(locals.errorObj && errorObj.CpasswordError) { %>
+            <p class="text-danger"><%= errorObj.CpasswordError %></p>
+        <% } %>
 
-        <a href="/login">Already a user? Signin</a>
+        <a href="/login">Already a user? Signin</a><br>
     
         <button type="submit">Signup</button>
     </form>
     
     <div>
-        <a class="btn btn-info" href="">Continue with google</a>
-        <a class="btn btn-primary" href="">Continue with facebook</a>
+        <a class="btn btn-info" href="/auth/google">Continue with google</a>
+        <a class="btn btn-primary" href="/auth/facebook">Continue with facebook</a>
     </div>
 </div>
