added admin layout for category

--- a/src/view/layouts/adminAuthLayout.ejs
+++ b/src/view/layouts/adminAuthLayout.ejs
@@ -13,7 +13,7 @@
     />
     <meta name="author" content="Dreamguys - Bootstrap Admin Template" />
     <meta name="robots" content="noindex, nofollow" />
-    <title>Login - Pos admin template</title>
+    <title><%- locals.title || "Tech Bay | Admin" %></title>
 
     <link
       rel="shortcut icon"
