--- a/src/view/admin/category/categoryEdit.ejs
+++ b/src/view/admin/category/categoryEdit.ejs
@@ -1,19 +1,23 @@
 <div class="content">
   <div class="page-header">
     <div class="page-title">
-      <h4>Add Category</h4>
-      <h6>Create new product Category</h6>
+      <h4>Edit Category</h4>
+      <h6>Update product Category</h6>
     </div>
   </div>
 
   <div class="card">
     <div class="card-body">
-      <form method="post" enctype="multipart/form-data">
+      <form method="post" action="?_method=PUT" enctype="multipart/form-data">
         <div class="row">
           <div class="col-lg-6 col-sm-6 col-12">
             <div class="form-group">
               <label>Category Name</label>
-              <input type="text" name="name"/>
+              <input
+                type="text"
+                name="name"
+                value="<%= locals.category.name || '' %>"
+              />
             </div>
           </div>
           <div class="col-lg-6 col-sm-6 col-12">
@@ -21,21 +25,14 @@
               <label>Active</label>
               <div class="radio">
                 <label>
-                  <input
-                    type="radio"
-                    name="isActive"
-                    value="true"
-                    checked
-                  />Yes</label
+                  <input type="radio" name="isActive" value="true" <%=
+                  locals.category.isActive ? 'checked' : '' %> />Yes</label
                 >
               </div>
               <div class="radio">
                 <label>
-                  <input
-                    type="radio"
-                    name="isActive"
-                    value="false"
-                  />No</label
+                  <input type="radio" name="isActive" value="false" <%=
+                  locals.category.isActive ? '' : 'checked' %> />No</label
                 >
               </div>
             </div>
@@ -43,14 +40,17 @@
           <div class="col-lg-12">
             <div class="form-group">
               <label>Description</label>
-              <textarea name="description" class="form-control"></textarea>
+              <textarea name="description" class="form-control">
+<%= locals.category.description || '' %></textarea
+              >
             </div>
           </div>
           <div class="col-lg-12">
             <div class="form-group">
               <label> Category Image</label>
               <div class="image-upload">
-                <input type="file" name="image" class="productImageInput"/>
+                <input type="file" name="image" class="productImageInput" />
+                <input type="hidden" name="existingImage" value="<%= locals.category.image %>"/>
                 <div class="image-uploads">
                   <img
                     src="/static/backend/assets/img/icons/upload.svg"
@@ -65,7 +65,22 @@
           <div class="col-12">
             <div class="product-list">
               <ul class="row input-image-previewer">
-                
+                <li class="ps-0">
+                  <div class="productviews">
+                    <div class="productviewsimg">
+                      <img
+                        src="/<%= locals.category.image %>"
+                        alt="/<%= locals.category.name %>"
+                      />
+                    </div>
+                    <div class="productviewscontent">
+                      <div class="productviewsname">
+                        <h2><%= locals.imageName %></h2>
+                      </div>
+                      <!-- <a href="javascript:void(0);" class="hideset">x</a> -->
+                    </div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
