--- a/src/view/admin/category/categoryList.ejs
+++ b/src/view/admin/category/categoryList.ejs
@@ -129,7 +129,8 @@
                               alt="img"
                             />
                           </a>
-                          <a class="me-3 confirm-text" href="/admin/category/delete/<%= category.id %>">
+                          <a class="me-3" onclick="confirmDelete('/admin/category/delete/<%= category.id %>?_method=DELETE')" href="javascript:void(0);">
+                          <!-- <a class="me-3 confirm-text" href="/admin/category/delete/<%= category.id %>?_method=DELETE"> -->
                             <img
                               src="/static/backend/assets/img/icons/delete.svg"
                               alt="img"
